--- a/WeatherApp.AppHost/WeatherApp.AppHost.csproj
+++ b/WeatherApp.AppHost/WeatherApp.AppHost.csproj
@@ -1,22 +1,32 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Sdk Name="Aspire.AppHost.Sdk" Version="9.5.0" />
+    <Sdk Name="Aspire.AppHost.Sdk" Version="9.5.0"/>
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <UserSecretsId>f9dbbdd3-c389-4764-bda1-dd1f9a2ec98a</UserSecretsId>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <UserSecretsId>f9dbbdd3-c389-4764-bda1-dd1f9a2ec98a</UserSecretsId>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\WeatherApp.ApiService\WeatherApp.ApiService.csproj" />
-    <ProjectReference Include="..\WeatherApp.Web\WeatherApp.Web.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\WeatherApp.ApiService\WeatherApp.ApiService.csproj"/>
+        <ProjectReference Include="..\WeatherApp.client\WeatherApp.client.esproj"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.5.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.5.0"/>
+        <PackageReference Include="Aspire.Hosting.Docker" Version="9.5.2-preview.1.25522.3" />
+        <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.5.2"/>
+    </ItemGroup>
+    <Target Name="RestoreNpm" BeforeTargets="Build" Condition=" '$(DesignTimeBuild)' != 'true' ">
+        <ItemGroup>
+            <PackageJsons Include="..\*\package.json"/>
+        </ItemGroup>
 
+        <!-- Install npm packages if node_modules is missing -->
+        <Message Importance="Normal" Text="Installing npm packages for %(PackageJsons.RelativeDir)" Condition="!Exists('%(PackageJsons.RootDir)%(PackageJsons.Directory)/node_modules')"/>
+        <Exec Command="npm install" WorkingDirectory="%(PackageJsons.RootDir)%(PackageJsons.Directory)" Condition="!Exists('%(PackageJsons.RootDir)%(PackageJsons.Directory)/node_modules')"/>
+    </Target>
 </Project>
